[package]
name = "ennona"
version = "0.1.0"
authors = [
    "Andrew Franco <schweebledev@gmail.com>",
    "Geordon Worley <vadixidav@gmail.com>",
]
edition = "2018"
resolver = "2"

[dependencies]
futures-lite = "1.12.0"
egui = "0.17.0"
epi = "0.17.0"
egui_wgpu_backend = "0.17.0"
egui_winit_platform = "0.14.0"
epaint = "0.17.0"
wgpu = "0.12.0"
winit = "0.26.1"
egui_demo_lib = "0.17.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
lazy_static = "1.4.0"
nalgebra = "0.30.1"
pretty_env_logger = "0.4.0"
ply-rs = "0.1.3"
structopt = "0.3.25"
eyre = "0.6.5"
log = "0.4.14"
image = "0.24.1"
itertools = "0.10.1"

[profile.release]
opt-level = 2 # fast and small wasm
